cmake_minimum_required(VERSION 3.28)
project(AlgorithmCourseDesign)

set(CMAKE_CXX_STANDARD 17)

add_executable(AlgorithmCourseDesign main.cpp)

add_executable(SegmentTree SegmentTree.cpp)

add_executable(TreeArray TreeArray.cpp)

add_executable(Bfs Bfs.cpp)

add_executable(Dfs Dfs.cpp)
add_executable(HourseTraversal HourseTraversal.cpp)
